CHANGELOG

2.1.3
UTIL:
* type=rule ruletype=nat | introduce 'filter=(natruletype is XYZ)' - 'ipv4', 'nat64', 'nptv6'
* type=rule ruletype=nat | introduce 'filter=(snatinterface is.set)'
* type=rule ruletype=nat 'actions=exporttoexcel:test-export-service.html' | introduce nat_rule_type
* type=rule ruletype=nat | actions=display - introduce dnattype, dnatdistribution
* type=rule ruletype=nat | introduce 'filter=( dnattype is.dynamic )  | (dnattype is.static) | (dnatport has SERIVCEobjNAME) | (dnatdistribution is.round-robin / is.source-ip-hash / is.ip-modulo / is.ip-hash / is.least-session)
* type=rule actions=exporttoexcel:file.html | extend with dnat_type, dnat_port, dnat_distribution field
* type=rule ruletype=nat | introduce 'filter=(dnatport is.set)' - improvements to handle dnat fields
* type=gcp | improve helper tool for specific mgmtsvc tenant
* type=rule ruletype=nat actions=exporttoexcel:file.html | extend NAT rule information with dst_interface and snat_interface

BUGFIX:
* type=rule ruletype=nat 'actions=exporttoexcel:test-export-service.html,ResolveServiceSummary' | bugfix for service count

GENERAL:
* remove alias | pa_migraiton-parser, pa_appidtoolbox-* - as now covered with alias 'pan-os-php type='


2.1.2 (20230428)
UTIL:
* type=rule-merger | introduce additionalmatch=logprof - to also check that only rules with same logging profile are merged
* type=device | introduce 'filter=(devicegroup with-no-serial)'
* type=gcp | introduce actions=offboard | extend authentication with automatically open Google Chrome
* type=appid-toolbox | introduction of new type | integrate appid migration run directly by using pan-os-php alias
* type=xpath | change all filter argument to start with "filter-"
* type=appid-toolbox | introduce additional arguments to better use in bash autocompletion script |p1-marker|p2-generator|p3-cloner|p5-activation|p6-cleaner
* type=rule ruletype=nat | introduce new 'filter=(snatinterface has.regex /VALUE/)'

BUGFIX: